# BlogPost-python

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
hello-world/: Dockerfile
src/: access_performance.py  basic_exception.py  cast.py  class.py  conversion.py  custom_exception.py  dict.py  dict_basic.py  error_from_finally.py  exec_another_file.py  file_read.py  flatten_list.py  for.py  format.py  get_constant.py  get_object_keys.py  get_set_attr.py  if.py  init_call.py  inner_yield.py  join.py  json_load.py  lambda.py  list_colon.py  list_filter.py  literal_string.py  logger.py  loop_vs_map.py  main_check.py  map.py  multi_threads.py  obj.py  or.py  pass_constructor.py  path.py  reconstruct_dict.py  regex.py  remove_duplicates.py  simple_queue.py  sort_dict.py  (+7 more)
src/ModuleNotFoundError/: conf.py  main.py
src/ModuleNotFoundError/folder1/: my_funcs.py
src/ModuleNotFoundError/folder2/: hello.py
src/linear-regression/: .gitignore  Dockerfile  README.md  build.sh  gradient_decent.py  numpy_func.py  plot.py  process.py  start.sh  with_bias.py  without_bias.py
src/test/: conftest.py  test_mockito.py  test_pass_list.py  test_passing_when.py  test_passing_when2.py  test_pytest.py  test_pytest2.py  test_pytest_scope.py  test_pytest_scope2.py
src/test/mock_constructor/: generator.py  item.py  test_generator.py
src/timeits/: hello_world.py  use_timeit.py
src/timeits/sub/: hey.py
