[tool.poetry]
authors = ["yuto-yuto"]
description = "Python repository for learning"
license = "MIT"
name = "blogpost-python"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mockito = "^1.4.0"
pytest = "^7.1.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.pylint.MASTER]
jobs = 0
py-version = "3.10"

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]
